# PhoenixDialogGenerator

./: .gitignore  CMakeLists.txt  CMakeSettings.json  PhoenixDialogGenerator.rc  README.md
data/: actors.txt  langs.txt  voicelines.txt
data/fr/al/: 0.flac  1.flac  10.flac  11.flac  12.flac  13.flac  14.flac  15.flac  2.flac  3.flac  4.flac  5.flac  6.flac  7.flac  8.flac  9.flac
data/fr/helga/: 0.flac  1.flac  10.flac  11.flac  12.flac  13.flac  14.flac  15.flac  16.flac  17.flac  18.flac  19.flac  2.flac  20.flac  21.flac  3.flac  4.flac  5.flac  6.flac  7.flac  8.flac  9.flac
data/fr/qwark/: 0.flac  1.flac  10.flac  11.flac  12.flac  13.flac  14.flac  15.flac  16.flac  17.flac  18.flac  19.flac  2.flac  20.flac  21.flac  22.flac  23.flac  24.flac  25.flac  26.flac  27.flac  28.flac  29.flac  3.flac  4.flac  5.flac  6.flac  7.flac  8.flac  9.flac
data/fr/ranger/: 0.flac  1.flac  10.flac  11.flac  12.flac  13.flac  14.flac  2.flac  3.flac  4.flac  5.flac  6.flac  7.flac  8.flac  9.flac
data/fr/sasha/: 0.flac  1.flac  10.flac  11.flac  12.flac  13.flac  14.flac  15.flac  16.flac  17.flac  18.flac  19.flac  2.flac  20.flac  21.flac  22.flac  23.flac  24.flac  25.flac  3.flac  4.flac  5.flac  6.flac  7.flac  8.flac  9.flac
data/fr/skidd/: 0.flac  1.flac  10.flac  11.flac  12.flac  13.flac  14.flac  15.flac  16.flac  2.flac  3.flac  4.flac  5.flac  6.flac  7.flac  8.flac  9.flac
src/: icon.h  main.cpp  ogl_imgui.h  strings.h
